# Geometry3DApp

./: .gitignore  APK打包指南.md  GitHub构建指南.md  README.md  Windows桌面版本指南.md  Windows试运行指南.md  pubspec.yaml
.github/workflows/: build-apk.yml  build-windows.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/geometry_3d_app/: MainActivity.kt
lib/: main.dart
lib/screens/: angle_demo.dart  knowledge_screen.dart  theorem_demo.dart
windows/: CMakeLists.txt
windows/runner/: flutter_window.h  main.cpp  resource.h  resources.rc  utils.cpp  utils.h  win32_window.cpp  win32_window.h
